--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -10,6 +10,7 @@ main,
 footer {
     position: relative;
     z-index: 2;
+    pointer-events: none;
 }
 
 // Background
@@ -48,7 +49,7 @@ header {
     width: 100%;
     max-width: 1500px;
     margin: 0 auto;
-    padding: 50px 100px;
+    padding: 50px 100px 0;
 }
 
 .logo {
@@ -97,6 +98,21 @@ header {
         color: #FFEEEE;
         text-shadow: -6px 0 14px #21d4fd, 0 5px 3px #000;
         margin: 0 0 24px;
+
+        & span {
+            //animation: blink 2s linear 650ms infinite alternate;
+            animation: glow 4s linear 650ms infinite alternate;
+
+            &:nth-child(2n+0) {
+                //animation: blink 2.4s linear 1.35s infinite alternate;                
+                animation: glow 4.4s linear 1.35s infinite alternate;                
+            }
+
+            &:nth-child(3n+0) {
+                //animation: blink 2.2s linear 950ms infinite alternate;                
+                animation: glow 4.2s linear 950ms infinite alternate;                
+            }
+        }
     }
 
     //.content__subheading
@@ -106,5 +122,177 @@ header {
         color: #FFEEEE;
         text-shadow: -6px 0 14px #21d4fd, 0 5px 3px #000;
         margin: 0 0 24px;
+
+        & span {
+            animation: blink 2s linear 650ms infinite alternate;
+
+            &:nth-child(2n+0) {
+                animation: blink 2.4s linear 1.35s infinite alternate;                
+            }
+
+            &:nth-child(3n+0) {
+                animation: blink 2.2s linear 950ms infinite alternate;                
+            }
+        }
     }
 }
+
+@keyframes blink {
+    78% {
+      color: inherit;
+      text-shadow: inherit;
+    }
+    79%{
+       color: #333;
+    }
+    80% {
+      
+      text-shadow: none;
+    }
+    81% {
+      color: inherit;
+      text-shadow: inherit;
+    }
+    82% {
+      color: #333;
+      text-shadow: none;
+    }
+    83% {
+      color: inherit;
+      text-shadow: inherit;
+    }
+    92% {
+      color: #333;
+      text-shadow: none;
+    }
+    92.5% {
+      color: inherit;
+      text-shadow: inherit;
+    }
+}
+
+@keyframes glow {
+    33% {
+        text-shadow: -6px 0 14px #137f97, 0 5px 3px #000;
+    }
+
+    66% {
+        text-shadow: -6px 0 14px #79e5fd, 0 5px 3px #000;
+    }
+}
+
+// Links
+.links {
+    display: inline-block;
+    width: 100%;
+    margin: 0 auto;
+    padding: 0;
+    text-align: center;
+
+    // .links__link
+    &__link {
+        display: inline-block;
+        width: 100px;
+        height: 100px;
+        margin-left: 16px;
+        transition: transform 100ms ease-out;
+
+        &:nth-child(1) {
+            margin-left: 0;
+        }
+    }
+
+    a {
+
+    }
+}
+
+.link-helptip {
+    position: relative;
+    
+
+    // .link-helptip__icon
+    &__icon {
+        width: 100%;
+        height: 100%;
+        display: block;
+        cursor: pointer;
+        pointer-events: auto;
+        
+        &:hover,
+        &:active {
+            transform: scale(1.2);
+        }
+
+        &:hover,
+        &:active {
+            .link-helptip__arrow,
+            .link-helptip__tip {
+                visibility: visible;
+                opacity: 1;
+            }
+        }
+    }
+
+    // .link-helptip__arrow
+    &__arrow {
+        display: block;
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 300ms, visibility 500ms ease-in-out;
+        position: absolute;
+        top: -15px;
+        left: 50%;
+        transform: rotate(45deg) translate(calc(-50% + 8px));
+        width: 12px;
+        height: 12px;
+        background-color: #FFF;
+        z-index: 1;
+        border-right: 1px solid #CCC;
+        border-bottom: 1px solid #CCC;
+    }
+
+    // .link-helptip__tip
+    &__tip {
+        display: block;
+        opacity: 0;
+        visibility: hidden;
+        transition: opacity 300ms, visibility 500ms ease-in-out;
+        position: absolute;
+        left: 50%;
+        bottom: calc(100% + 8px);
+        width: 150px;
+        padding: 8px 16px;
+        background-color: #FFF;
+        border: 1px solid #CCCCCC;
+        border-radius: 4px;
+        font-family: 'Roboto', sans-serif;
+        font-size: 1.3rem;
+        line-height: 1.5;
+        color: #444;
+        text-align: left;
+        transform: translateX(calc(-50% + 8px));
+    
+        @include break-lg() {
+            width: calc(100% - 24px);
+        }
+    }
+}
+
+.link-helptip__icon:hover+.link-helptip__arrow,
+.link-helptip__icon:hover+.link-helptip__arrow+.link-helptip__tip {
+    opacity: 1;
+    visibility: visible;
+}
+
+/* ---- particles.js container ---- */
+
+#particles-js{
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    z-index: 2;
+  }
