--- a/src/css/style.css
+++ b/src/css/style.css
@@ -319,7 +319,8 @@ header,
 main,
 footer {
   position: relative;
-  z-index: 2; }
+  z-index: 2;
+  pointer-events: none; }
 
 .background {
   background-color: #261f4b;
@@ -347,7 +348,7 @@ header {
   width: 100%;
   max-width: 1500px;
   margin: 0 auto;
-  padding: 50px 100px; }
+  padding: 50px 100px 0; }
 
 .logo {
   width: 150px;
@@ -361,11 +362,136 @@ header {
     color: #FFEEEE;
     text-shadow: -6px 0 14px #21d4fd, 0 5px 3px #000;
     margin: 0 0 24px; }
+    .content__title span {
+      animation: glow 4s linear 650ms infinite alternate; }
+      .content__title span:nth-child(2n+0) {
+        animation: glow 4.4s linear 1.35s infinite alternate; }
+      .content__title span:nth-child(3n+0) {
+        animation: glow 4.2s linear 950ms infinite alternate; }
   .content__subheading {
     font-family: 'Permanent Marker', cursive;
     font-size: 7vh;
     color: #FFEEEE;
     text-shadow: -6px 0 14px #21d4fd, 0 5px 3px #000;
     margin: 0 0 24px; }
+    .content__subheading span {
+      animation: blink 2s linear 650ms infinite alternate; }
+      .content__subheading span:nth-child(2n+0) {
+        animation: blink 2.4s linear 1.35s infinite alternate; }
+      .content__subheading span:nth-child(3n+0) {
+        animation: blink 2.2s linear 950ms infinite alternate; }
+
+@keyframes blink {
+  78% {
+    color: inherit;
+    text-shadow: inherit; }
+  79% {
+    color: #333; }
+  80% {
+    text-shadow: none; }
+  81% {
+    color: inherit;
+    text-shadow: inherit; }
+  82% {
+    color: #333;
+    text-shadow: none; }
+  83% {
+    color: inherit;
+    text-shadow: inherit; }
+  92% {
+    color: #333;
+    text-shadow: none; }
+  92.5% {
+    color: inherit;
+    text-shadow: inherit; } }
+
+@keyframes glow {
+  33% {
+    text-shadow: -6px 0 14px #137f97, 0 5px 3px #000; }
+  66% {
+    text-shadow: -6px 0 14px #79e5fd, 0 5px 3px #000; } }
+
+.links {
+  display: inline-block;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0;
+  text-align: center; }
+  .links__link {
+    display: inline-block;
+    width: 100px;
+    height: 100px;
+    margin-left: 16px;
+    transition: transform 100ms ease-out; }
+    .links__link:nth-child(1) {
+      margin-left: 0; }
+
+.link-helptip {
+  position: relative; }
+  .link-helptip__icon {
+    width: 100%;
+    height: 100%;
+    display: block;
+    cursor: pointer;
+    pointer-events: auto; }
+    .link-helptip__icon:hover, .link-helptip__icon:active {
+      transform: scale(1.2); }
+    .link-helptip__icon:hover .link-helptip__arrow,
+    .link-helptip__icon:hover .link-helptip__tip, .link-helptip__icon:active .link-helptip__arrow,
+    .link-helptip__icon:active .link-helptip__tip {
+      visibility: visible;
+      opacity: 1; }
+  .link-helptip__arrow {
+    display: block;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 300ms, visibility 500ms ease-in-out;
+    position: absolute;
+    top: -15px;
+    left: 50%;
+    transform: rotate(45deg) translate(calc(-50% + 8px));
+    width: 12px;
+    height: 12px;
+    background-color: #FFF;
+    z-index: 1;
+    border-right: 1px solid #CCC;
+    border-bottom: 1px solid #CCC; }
+  .link-helptip__tip {
+    display: block;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 300ms, visibility 500ms ease-in-out;
+    position: absolute;
+    left: 50%;
+    bottom: calc(100% + 8px);
+    width: 150px;
+    padding: 8px 16px;
+    background-color: #FFF;
+    border: 1px solid #CCCCCC;
+    border-radius: 4px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1.3rem;
+    line-height: 1.5;
+    color: #444;
+    text-align: left;
+    transform: translateX(calc(-50% + 8px)); }
+    @media screen and (min-width: calc-em(1024px)) {
+      .link-helptip__tip {
+        width: calc(100% - 24px); } }
+
+.link-helptip__icon:hover + .link-helptip__arrow,
+.link-helptip__icon:hover + .link-helptip__arrow + .link-helptip__tip {
+  opacity: 1;
+  visibility: visible; }
+
+/* ---- particles.js container ---- */
+#particles-js {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 2; }
 
 /*# sourceMappingURL=style.css.map */
